--- a/src/css/output.css
+++ b/src/css/output.css
@@ -12,11 +12,18 @@
     --color-amber-300: oklch(0.879 0.169 91.605);
     --color-blue-950: oklch(0.282 0.091 267.935);
     --color-purple-400: oklch(0.714 0.203 305.504);
+    --color-purple-500: oklch(0.627 0.265 303.9);
+    --color-purple-600: oklch(0.558 0.288 302.321);
     --color-purple-700: oklch(0.496 0.265 301.924);
     --color-purple-800: oklch(0.438 0.218 303.724);
     --color-purple-900: oklch(0.381 0.176 304.987);
+    --color-purple-950: oklch(0.291 0.149 302.717);
+    --color-pink-500: oklch(0.656 0.241 354.308);
     --color-pink-600: oklch(0.592 0.249 0.584);
     --color-gray-300: oklch(0.872 0.01 258.338);
+    --color-gray-700: oklch(0.373 0.034 259.733);
+    --color-gray-800: oklch(0.278 0.033 256.848);
+    --color-gray-900: oklch(0.21 0.034 264.665);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -45,6 +52,7 @@
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --font-weight-black: 900;
     --tracking-wide: 0.025em;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
@@ -261,6 +269,9 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
+  .-top-\[20\%\] {
+    top: calc(20% * -1);
+  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
@@ -297,6 +308,15 @@
   .top-52 {
     top: calc(var(--spacing) * 52);
   }
+  .top-\[2\] {
+    top: 2;
+  }
+  .top-\[20\%\] {
+    top: 20%;
+  }
+  .top-\[20\] {
+    top: 20;
+  }
   .top-\[50\%\] {
     top: 50%;
   }
@@ -330,11 +350,59 @@
   .right-52 {
     right: calc(var(--spacing) * 52);
   }
+  .bottom-2 {
+    bottom: calc(var(--spacing) * 2);
+  }
   .bottom-10 {
     bottom: calc(var(--spacing) * 10);
   }
+  .bottom-\[0\.1px\] {
+    bottom: 0.1px;
+  }
+  .bottom-\[0\.5px\] {
+    bottom: 0.5px;
+  }
+  .bottom-\[0\.px\] {
+    bottom: 0.px;
+  }
+  .bottom-\[0px\] {
+    bottom: 0px;
+  }
+  .bottom-\[1px\] {
+    bottom: 1px;
+  }
+  .bottom-\[2\] {
+    bottom: 2;
+  }
+  .bottom-\[2p\] {
+    bottom: 2p;
+  }
+  .bottom-\[2px\] {
+    bottom: 2px;
+  }
+  .bottom-\[px\] {
+    bottom: px;
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
+  .left-\[0\%\] {
+    left: 0%;
+  }
+  .left-\[5\] {
+    left: 5;
+  }
+  .left-\[20\%\] {
+    left: 20%;
+  }
   .left-\[46\%\] {
     left: 46%;
+  }
+  .left-\[50\%\] {
+    left: 50%;
+  }
+  .left-\[50\] {
+    left: 50;
   }
   .isolate {
     isolation: isolate;
@@ -348,11 +416,20 @@
   .-z-10 {
     z-index: calc(10 * -1);
   }
+  .z-0 {
+    z-index: 0;
+  }
   .z-1 {
     z-index: 1;
   }
+  .z-2 {
+    z-index: 2;
+  }
   .z-10 {
     z-index: 10;
+  }
+  .z-20 {
+    z-index: 20;
   }
   .z-100 {
     z-index: 100;
@@ -468,6 +545,9 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
+  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
@@ -483,8 +563,26 @@
   .mt-16 {
     margin-top: calc(var(--spacing) * 16);
   }
+  .mt-20 {
+    margin-top: calc(var(--spacing) * 20);
+  }
+  .mt-32 {
+    margin-top: calc(var(--spacing) * 32);
+  }
+  .mt-40 {
+    margin-top: calc(var(--spacing) * 40);
+  }
+  .mb-0 {
+    margin-bottom: calc(var(--spacing) * 0);
+  }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
+  }
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
+  }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
   }
   .box-border {
     box-sizing: border-box;
@@ -573,8 +671,23 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .h-0 {
+    height: calc(var(--spacing) * 0);
+  }
+  .h-1 {
+    height: calc(var(--spacing) * 1);
+  }
   .h-2 {
     height: calc(var(--spacing) * 2);
+  }
+  .h-3 {
+    height: calc(var(--spacing) * 3);
+  }
+  .h-4 {
+    height: calc(var(--spacing) * 4);
+  }
+  .h-7 {
+    height: calc(var(--spacing) * 7);
   }
   .h-8 {
     height: calc(var(--spacing) * 8);
@@ -594,20 +707,83 @@
   .h-28 {
     height: calc(var(--spacing) * 28);
   }
+  .h-32 {
+    height: calc(var(--spacing) * 32);
+  }
+  .h-36 {
+    height: calc(var(--spacing) * 36);
+  }
+  .h-40 {
+    height: calc(var(--spacing) * 40);
+  }
+  .h-72 {
+    height: calc(var(--spacing) * 72);
+  }
+  .h-80 {
+    height: calc(var(--spacing) * 80);
+  }
+  .h-82 {
+    height: calc(var(--spacing) * 82);
+  }
+  .h-\[0px\] {
+    height: 0px;
+  }
+  .h-\[3\] {
+    height: 3;
+  }
   .h-\[6\] {
     height: 6;
   }
   .h-\[9\] {
     height: 9;
   }
+  .h-\[9px\] {
+    height: 9px;
+  }
+  .h-\[10px\] {
+    height: 10px;
+  }
+  .h-\[30\] {
+    height: 30;
+  }
+  .h-\[30p\] {
+    height: 30p;
+  }
+  .h-\[30px\] {
+    height: 30px;
+  }
+  .h-\[70px\] {
+    height: 70px;
+  }
   .h-\[90\] {
     height: 90;
+  }
+  .h-\[90px\] {
+    height: 90px;
   }
   .h-\[90v\] {
     height: 90v;
   }
   .h-\[90vh\] {
     height: 90vh;
+  }
+  .h-\[92px\] {
+    height: 92px;
+  }
+  .h-\[94px\] {
+    height: 94px;
+  }
+  .h-\[95px\] {
+    height: 95px;
+  }
+  .h-\[100px\] {
+    height: 100px;
+  }
+  .h-\[110px\] {
+    height: 110px;
+  }
+  .h-\[px\] {
+    height: px;
   }
   .h-auto {
     height: auto;
@@ -642,14 +818,32 @@
   .w-2 {
     width: calc(var(--spacing) * 2);
   }
+  .w-2\/2 {
+    width: calc(2/2 * 100%);
+  }
   .w-2\/3 {
     width: calc(2/3 * 100%);
+  }
+  .w-2\/5 {
+    width: calc(2/5 * 100%);
+  }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
+  }
+  .w-3\/5 {
+    width: calc(3/5 * 100%);
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
   .w-4\/6 {
     width: calc(4/6 * 100%);
+  }
+  .w-6 {
+    width: calc(var(--spacing) * 6);
+  }
+  .w-7 {
+    width: calc(var(--spacing) * 7);
   }
   .w-8 {
     width: calc(var(--spacing) * 8);
@@ -674,6 +868,12 @@
   }
   .w-44 {
     width: calc(var(--spacing) * 44);
+  }
+  .w-60 {
+    width: calc(var(--spacing) * 60);
+  }
+  .w-72 {
+    width: calc(var(--spacing) * 72);
   }
   .w-96 {
     width: calc(var(--spacing) * 96);
@@ -793,11 +993,104 @@
   .rotate-1 {
     rotate: 1deg;
   }
+  .rotate-4 {
+    rotate: 4deg;
+  }
+  .rotate-6 {
+    rotate: 6deg;
+  }
+  .rotate-11 {
+    rotate: 11deg;
+  }
+  .rotate-12 {
+    rotate: 12deg;
+  }
   .rotate-45 {
     rotate: 45deg;
   }
+  .rotate-\[2deg\] {
+    rotate: 2deg;
+  }
+  .rotate-\[3deg\] {
+    rotate: 3deg;
+  }
+  .rotate-\[4\] {
+    rotate: 4;
+  }
+  .rotate-\[4deg\] {
+    rotate: 4deg;
+  }
+  .rotate-\[28deg\] {
+    rotate: 28deg;
+  }
+  .rotate-\[29deg\] {
+    rotate: 29deg;
+  }
+  .rotate-\[30deg\] {
+    rotate: 30deg;
+  }
+  .rotate-\[33deg\] {
+    rotate: 33deg;
+  }
+  .rotate-\[34deg\] {
+    rotate: 34deg;
+  }
+  .rotate-\[35deg\] {
+    rotate: 35deg;
+  }
+  .rotate-\[36deg\] {
+    rotate: 36deg;
+  }
+  .rotate-\[37deg\] {
+    rotate: 37deg;
+  }
+  .rotate-\[38deg\] {
+    rotate: 38deg;
+  }
+  .rotate-\[40deg\] {
+    rotate: 40deg;
+  }
+  .rotate-\[44\] {
+    rotate: 44;
+  }
+  .rotate-\[44d\] {
+    rotate: 44d;
+  }
+  .rotate-\[44de\] {
+    rotate: 44de;
+  }
+  .rotate-\[44deg\] {
+    rotate: 44deg;
+  }
+  .rotate-\[deg\] {
+    rotate: deg;
+  }
   .rotate-none {
     rotate: none;
+  }
+  .rotate-x-\[4\] {
+    --tw-rotate-x: rotateX(4);
+    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
+  }
+  .rotate-x-\[44\%\] {
+    --tw-rotate-x: rotateX(44%);
+    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
+  }
+  .rotate-x-\[44\] {
+    --tw-rotate-x: rotateX(44);
+    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
+  }
+  .rotate-x-\[44d\] {
+    --tw-rotate-x: rotateX(44d);
+    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
+  }
+  .rotate-x-\[44de\] {
+    --tw-rotate-x: rotateX(44de);
+    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
+  }
+  .rotate-x-\[44deg\] {
+    --tw-rotate-x: rotateX(44deg);
+    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
   .transform {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
@@ -1085,6 +1378,9 @@
   .justify-items-stretch {
     justify-items: stretch;
   }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -1100,14 +1396,31 @@
   .gap-12 {
     gap: calc(var(--spacing) * 12);
   }
+  .gap-16 {
+    gap: calc(var(--spacing) * 16);
+  }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
+  }
+  .space-y-1 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 1) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 1) * calc(1 - var(--tw-space-y-reverse)));
+    }
   }
   .space-y-2 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
       margin-block-start: calc(calc(var(--spacing) * 2) * var(--tw-space-y-reverse));
       margin-block-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .space-y-4 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
   .space-y-5 {
@@ -1155,6 +1468,13 @@
       --tw-space-x-reverse: 0;
       margin-inline-start: calc(calc(var(--spacing) * 3) * var(--tw-space-x-reverse));
       margin-inline-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-x-reverse)));
+    }
+  }
+  .space-x-6 {
+    :where(& > :not(:last-child)) {
+      --tw-space-x-reverse: 0;
+      margin-inline-start: calc(calc(var(--spacing) * 6) * var(--tw-space-x-reverse));
+      margin-inline-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
   .space-x-20 {
@@ -1244,6 +1564,9 @@
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+  .overflow-hidden {
+    overflow: hidden;
+  }
   .overflow-x-hidden {
     overflow-x: hidden;
   }
@@ -1317,6 +1640,14 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
+  .border-4 {
+    border-style: var(--tw-border-style);
+    border-width: 4px;
+  }
   .border-x {
     border-inline-style: var(--tw-border-style);
     border-inline-width: 1px;
@@ -1340,6 +1671,10 @@
   .border-r {
     border-right-style: var(--tw-border-style);
     border-right-width: 1px;
+  }
+  .border-r-2 {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 2px;
   }
   .border-b {
     border-bottom-style: var(--tw-border-style);
@@ -1380,8 +1715,20 @@
   .border-purple-400 {
     border-color: var(--color-purple-400);
   }
+  .border-purple-400\/0 {
+    border-color: color-mix(in oklab, var(--color-purple-400) 0%, transparent);
+  }
+  .border-purple-400\/2 {
+    border-color: color-mix(in oklab, var(--color-purple-400) 2%, transparent);
+  }
+  .border-purple-400\/5 {
+    border-color: color-mix(in oklab, var(--color-purple-400) 5%, transparent);
+  }
   .border-purple-400\/20 {
     border-color: color-mix(in oklab, var(--color-purple-400) 20%, transparent);
+  }
+  .border-purple-400\/50 {
+    border-color: color-mix(in oklab, var(--color-purple-400) 50%, transparent);
   }
   .border-white {
     border-color: var(--color-white);
@@ -1434,11 +1781,32 @@
   .bg-\[\#4E5073\] {
     background-color: #4E5073;
   }
+  .bg-\[\#17\] {
+    background-color: #17;
+  }
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
   }
   .bg-\[\#110c34\] {
     background-color: #110c34;
+  }
+  .bg-\[\#170F2F\] {
+    background-color: #170F2F;
+  }
+  .bg-\[\#170F2\] {
+    background-color: #170F2;
+  }
+  .bg-\[\#170F\@F\] {
+    background-color: #170F@F;
+  }
+  .bg-\[\#170F\@\] {
+    background-color: #170F@;
+  }
+  .bg-\[\#170F\] {
+    background-color: #170F;
+  }
+  .bg-\[\#170\] {
+    background-color: #170;
   }
   .bg-\[\#170f2f\] {
     background-color: #170f2f;
@@ -1512,6 +1880,18 @@
   .bg-blue-950\/95 {
     background-color: color-mix(in oklab, var(--color-blue-950) 95%, transparent);
   }
+  .bg-gray-700 {
+    background-color: var(--color-gray-700);
+  }
+  .bg-gray-800 {
+    background-color: var(--color-gray-800);
+  }
+  .bg-gray-900 {
+    background-color: var(--color-gray-900);
+  }
+  .bg-purple-950 {
+    background-color: var(--color-purple-950);
+  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
@@ -1520,6 +1900,9 @@
   }
   .bg-red-500\/\[50\%\] {
     background-color: color-mix(in oklab, var(--color-red-500) 50%, transparent);
+  }
+  .bg-white {
+    background-color: var(--color-white);
   }
   .-bg-conic {
     --tw-gradient-position: in oklab;
@@ -1538,6 +1921,19 @@
   }
   .via-none {
     --tw-gradient-via-stops: initial;
+  }
+  .from-purple-500 {
+    --tw-gradient-from: var(--color-purple-500);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .via-purple-600 {
+    --tw-gradient-via: var(--color-purple-600);
+    --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-via-stops);
+  }
+  .to-purple-700 {
+    --tw-gradient-to: var(--color-purple-700);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .box-decoration-clone {
     -webkit-box-decoration-break: clone;
@@ -1687,6 +2083,24 @@
   .object-top {
     object-position: top;
   }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
+  .p-6 {
+    padding: calc(var(--spacing) * 6);
+  }
+  .p-20 {
+    padding: calc(var(--spacing) * 20);
+  }
+  .px-0 {
+    padding-inline: calc(var(--spacing) * 0);
+  }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
@@ -1753,6 +2167,9 @@
   .py-12 {
     padding-block: calc(var(--spacing) * 12);
   }
+  .py-16 {
+    padding-block: calc(var(--spacing) * 16);
+  }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
   }
@@ -1762,17 +2179,59 @@
   .py-44 {
     padding-block: calc(var(--spacing) * 44);
   }
+  .pt-0 {
+    padding-top: calc(var(--spacing) * 0);
+  }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
+  }
+  .pt-3 {
+    padding-top: calc(var(--spacing) * 3);
+  }
+  .pt-4 {
+    padding-top: calc(var(--spacing) * 4);
+  }
+  .pt-20 {
+    padding-top: calc(var(--spacing) * 20);
+  }
+  .pt-32 {
+    padding-top: calc(var(--spacing) * 32);
+  }
+  .pt-36 {
+    padding-top: calc(var(--spacing) * 36);
+  }
   .pt-40 {
     padding-top: calc(var(--spacing) * 40);
   }
+  .pt-47 {
+    padding-top: calc(var(--spacing) * 47);
+  }
+  .pt-470 {
+    padding-top: calc(var(--spacing) * 470);
+  }
   .pr-4 {
     padding-right: calc(var(--spacing) * 4);
+  }
+  .pr-7 {
+    padding-right: calc(var(--spacing) * 7);
   }
   .pr-8 {
     padding-right: calc(var(--spacing) * 8);
   }
   .pr-40 {
     padding-right: calc(var(--spacing) * 40);
+  }
+  .pr-72 {
+    padding-right: calc(var(--spacing) * 72);
+  }
+  .pb-1 {
+    padding-bottom: calc(var(--spacing) * 1);
+  }
+  .pb-5 {
+    padding-bottom: calc(var(--spacing) * 5);
+  }
+  .pb-10 {
+    padding-bottom: calc(var(--spacing) * 10);
   }
   .pb-24 {
     padding-bottom: calc(var(--spacing) * 24);
@@ -1903,6 +2362,10 @@
     --tw-leading: 1;
     line-height: 1;
   }
+  .font-black {
+    --tw-font-weight: var(--font-weight-black);
+    font-weight: var(--font-weight-black);
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -1994,6 +2457,9 @@
   }
   .text-gray-300 {
     color: var(--color-gray-300);
+  }
+  .text-pink-500 {
+    color: var(--color-pink-500);
   }
   .text-purple-800 {
     color: var(--color-purple-800);
@@ -2148,6 +2614,9 @@
   }
   .scheme-only-light {
     color-scheme: only light;
+  }
+  .opacity-40 {
+    opacity: 40%;
   }
   .bg-blend-overlay {
     background-blend-mode: overlay;
@@ -2541,6 +3010,39 @@
   .transform-view {
     transform-box: view-box;
   }
+  .hover\:scale-105 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 105%;
+        --tw-scale-y: 105%;
+        --tw-scale-z: 105%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:border {
+    &:hover {
+      @media (hover: hover) {
+        border-style: var(--tw-border-style);
+        border-width: 1px;
+      }
+    }
+  }
+  .hover\:border-2 {
+    &:hover {
+      @media (hover: hover) {
+        border-style: var(--tw-border-style);
+        border-width: 2px;
+      }
+    }
+  }
+  .hover\:border-white {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--color-white);
+      }
+    }
+  }
   .hover\:bg-pink-600 {
     &:hover {
       @media (hover: hover) {
@@ -2749,6 +3251,48 @@
   inherits: false;
   initial-value: 0;
 }
+@property --tw-gradient-position {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-via {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-to {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-via-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 0%;
+}
+@property --tw-gradient-via-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 50%;
+}
+@property --tw-gradient-to-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
 @property --tw-leading {
   syntax: "*";
   inherits: false;
@@ -2940,46 +3484,4 @@
 @property --tw-contain-style {
   syntax: "*";
   inherits: false;
-}
-@property --tw-gradient-position {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-gradient-from {
-  syntax: "<color>";
-  inherits: false;
-  initial-value: #0000;
-}
-@property --tw-gradient-via {
-  syntax: "<color>";
-  inherits: false;
-  initial-value: #0000;
-}
-@property --tw-gradient-to {
-  syntax: "<color>";
-  inherits: false;
-  initial-value: #0000;
-}
-@property --tw-gradient-stops {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-gradient-via-stops {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-gradient-from-position {
-  syntax: "<length-percentage>";
-  inherits: false;
-  initial-value: 0%;
-}
-@property --tw-gradient-via-position {
-  syntax: "<length-percentage>";
-  inherits: false;
-  initial-value: 50%;
-}
-@property --tw-gradient-to-position {
-  syntax: "<length-percentage>";
-  inherits: false;
-  initial-value: 100%;
 }
