--- a/src/css/output.css
+++ b/src/css/output.css
@@ -281,6 +281,9 @@
   .top-7 {
     top: calc(var(--spacing) * 7);
   }
+  .top-8 {
+    top: calc(var(--spacing) * 8);
+  }
   .top-10 {
     top: calc(var(--spacing) * 10);
   }
@@ -296,8 +299,14 @@
   .top-52 {
     top: calc(var(--spacing) * 52);
   }
+  .top-\[\%\] {
+    top: %;
+  }
   .top-\[0\%\] {
     top: 0%;
+  }
+  .top-\[5\%\] {
+    top: 5%;
   }
   .top-\[5\] {
     top: 5;
@@ -310,6 +319,9 @@
   }
   .top-\[30\%\] {
     top: 30%;
+  }
+  .top-\[45\%\] {
+    top: 45%;
   }
   .top-\[50\%\] {
     top: 50%;
@@ -329,6 +341,9 @@
   .right-6 {
     right: calc(var(--spacing) * 6);
   }
+  .right-8 {
+    right: calc(var(--spacing) * 8);
+  }
   .right-10 {
     right: calc(var(--spacing) * 10);
   }
@@ -347,8 +362,20 @@
   .right-52 {
     right: calc(var(--spacing) * 52);
   }
+  .right-\[\%\] {
+    right: %;
+  }
   .right-\[0\%\] {
     right: 0%;
+  }
+  .right-\[3\%\] {
+    right: 3%;
+  }
+  .right-\[4\%\] {
+    right: 4%;
+  }
+  .right-\[5\%\] {
+    right: 5%;
   }
   .right-\[5\] {
     right: 5;
@@ -364,6 +391,15 @@
   }
   .right-\[20\%\] {
     right: 20%;
+  }
+  .right-\[35\%\] {
+    right: 35%;
+  }
+  .right-\[40\%\] {
+    right: 40%;
+  }
+  .right-\[45\%\] {
+    right: 45%;
   }
   .right-\[50\%\] {
     right: 50%;
@@ -545,6 +581,12 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .mt-0 {
+    margin-top: calc(var(--spacing) * 0);
+  }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
+  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
@@ -565,6 +607,9 @@
   }
   .mt-16 {
     margin-top: calc(var(--spacing) * 16);
+  }
+  .mt-20 {
+    margin-top: calc(var(--spacing) * 20);
   }
   .mt-24 {
     margin-top: calc(var(--spacing) * 24);
@@ -832,6 +877,30 @@
   }
   .w-96 {
     width: calc(var(--spacing) * 96);
+  }
+  .w-\[0vw\] {
+    width: 0vw;
+  }
+  .w-\[00vw\] {
+    width: 00vw;
+  }
+  .w-\[2\] {
+    width: 2;
+  }
+  .w-\[10vw\] {
+    width: 10vw;
+  }
+  .w-\[20\] {
+    width: 20;
+  }
+  .w-\[20v\] {
+    width: 20v;
+  }
+  .w-\[20vw\] {
+    width: 20vw;
+  }
+  .w-\[50vw\] {
+    width: 50vw;
   }
   .w-\[78vw\] {
     width: 78vw;
@@ -1291,6 +1360,9 @@
   }
   .gap-3 {
     gap: calc(var(--spacing) * 3);
+  }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
   }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
@@ -3278,9 +3350,19 @@
       position: fixed;
     }
   }
+  .lg\:top-0 {
+    @media (width >= 64rem) {
+      top: calc(var(--spacing) * 0);
+    }
+  }
   .lg\:top-12 {
     @media (width >= 64rem) {
       top: calc(var(--spacing) * 12);
+    }
+  }
+  .lg\:mt-0 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 0);
     }
   }
   .lg\:mt-40 {
@@ -3378,6 +3460,21 @@
       flex-direction: row;
     }
   }
+  .lg\:justify-start {
+    @media (width >= 64rem) {
+      justify-content: flex-start;
+    }
+  }
+  .lg\:gap-10 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:gap-20 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 20);
+    }
+  }
   .lg\:space-y-0 {
     @media (width >= 64rem) {
       :where(& > :not(:last-child)) {
@@ -3393,6 +3490,33 @@
         --tw-space-y-reverse: 0;
         margin-block-start: calc(calc(var(--spacing) * 1) * var(--tw-space-y-reverse));
         margin-block-end: calc(calc(var(--spacing) * 1) * calc(1 - var(--tw-space-y-reverse)));
+      }
+    }
+  }
+  .lg\:space-y-5 {
+    @media (width >= 64rem) {
+      :where(& > :not(:last-child)) {
+        --tw-space-y-reverse: 0;
+        margin-block-start: calc(calc(var(--spacing) * 5) * var(--tw-space-y-reverse));
+        margin-block-end: calc(calc(var(--spacing) * 5) * calc(1 - var(--tw-space-y-reverse)));
+      }
+    }
+  }
+  .lg\:space-y-6 {
+    @media (width >= 64rem) {
+      :where(& > :not(:last-child)) {
+        --tw-space-y-reverse: 0;
+        margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
+        margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
+      }
+    }
+  }
+  .lg\:space-y-8 {
+    @media (width >= 64rem) {
+      :where(& > :not(:last-child)) {
+        --tw-space-y-reverse: 0;
+        margin-block-start: calc(calc(var(--spacing) * 8) * var(--tw-space-y-reverse));
+        margin-block-end: calc(calc(var(--spacing) * 8) * calc(1 - var(--tw-space-y-reverse)));
       }
     }
   }
@@ -3413,6 +3537,16 @@
   .lg\:p-0 {
     @media (width >= 64rem) {
       padding: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:px-0 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:px-7 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 7);
     }
   }
   .lg\:px-28 {
@@ -3460,6 +3594,11 @@
       padding-top: calc(var(--spacing) * 40);
     }
   }
+  .lg\:pr-40 {
+    @media (width >= 64rem) {
+      padding-right: calc(var(--spacing) * 40);
+    }
+  }
   .lg\:pl-72 {
     @media (width >= 64rem) {
       padding-left: calc(var(--spacing) * 72);
@@ -3474,6 +3613,18 @@
     @media (width >= 64rem) {
       font-size: var(--text-3xl);
       line-height: var(--tw-leading, var(--text-3xl--line-height));
+    }
+  }
+  .lg\:text-4xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
+    }
+  }
+  .lg\:text-8xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-8xl);
+      line-height: var(--tw-leading, var(--text-8xl--line-height));
     }
   }
   .lg\:text-9xl {
@@ -3496,6 +3647,12 @@
   .lg\:text-\[38px\] {
     @media (width >= 64rem) {
       font-size: 38px;
+    }
+  }
+  .lg\:leading-12 {
+    @media (width >= 64rem) {
+      --tw-leading: calc(var(--spacing) * 12);
+      line-height: calc(var(--spacing) * 12);
     }
   }
 }
